force-app/main/default/objects/Requirement__c/Requirement__c.object-meta.xml
<CustomObject>
    <description>SM - This object will hold the records of requirements for a project</description>
    <label>Requirement</label>
    <nameField>
        <displayFormat>RQ-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>