force-app/main/default/objects/Requirement__c/fields/Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Criteria__c</fullName>
    <label>Acceptance Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>