force-app/main/default/objects/Requirement__c/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <label>Access Level</label>
    <type>TextArea</type>
</CustomField>