force-app/main/default/objects/Requirement__c/fields/Business_Requirement_Number__c.field-meta.xml
<CustomField>
    <fullName>Business_Requirement_Number__c</fullName>
    <label>Business Requirement Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>