force-app/main/default/objects/Requirement__c/fields/Functional_Description__c.field-meta.xml
<CustomField>
    <fullName>Functional_Description__c</fullName>
    <label>Functional Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>