force-app/main/default/objects/Requirement__c/fields/Not_Viable__c.field-meta.xml
<CustomField>
    <fullName>Not_Viable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Viable</label>
    <type>Checkbox</type>
</CustomField>