force-app/main/default/objects/Requirement__c/fields/Requirement_Comments__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Comments__c</fullName>
    <label>Requirement Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>