force-app/main/default/objects/Requirement__c/fields/Scope_Compliance__c.field-meta.xml
<CustomField>
    <fullName>Scope_Compliance__c</fullName>
    <label>Scope Compliance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Scope</fullName>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>