force-app/main/default/objects/Requirement__c/fields/Technical_Specification__c.field-meta.xml
<CustomField>
    <fullName>Technical_Specification__c</fullName>
    <label>Technical Specifications</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>